[package]
name = "rust_replica"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-raft = "0.6.1"
surrealdb = "1.1.1"
actix-web = "4.5.1"
async-std = { version = "1.12.0", features = [] }
tokio = { version = "1.36.0", features = [] }
log = { version = "0.4.20", features = [] }
serde = "1.0.193"
serde_json = "1.0.108"